# chatbot_test

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: bot.py  config.py  functions.py  handlers.py  openai.py
src/db/: crud.py  database.py  models.py
